# distributed-alignment

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  distributed_alignment.toml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-user-requirements.md  02-technical-design.md  03-product-requirements.md  changelog.md  scientific-context.md  task-tracker.md
docs/diagrams/mermaid/: architecture.mmd  data-flow.mmd  design-process.mmd  infra-layers.mmd  work-package-states.mmd
observability/: prometheus.yml
observability/grafana/dashboards/: distributed-alignment.json
observability/grafana/provisioning/: dashboards.yml
scripts/: compute_embeddings.py  download_metagenome.py  download_stress_test.py  download_taxonomy.sh  download_test_data.sh  download_test_fixtures.py  generate_test_data.py
src/distributed_alignment/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py
src/distributed_alignment/catalogue/: __init__.py  store.py
tests/: conftest.py  test_alignment_features.py  test_catalogue.py  test_chaos.py  test_chunker.py  test_cli.py  test_combiner.py  test_config.py  test_diamond_wrapper.py  test_embedding_features.py  test_enricher.py  test_fasta_parser.py  test_heartbeat.py  test_integration.py  test_kmer_features.py  test_logging.py  test_merger.py  test_metrics.py  test_multiworker.py  test_ray_worker.py  test_reaper.py  test_scaffolding.py  test_taxonomy_loader.py  test_work_stack.py  test_worker.py
tests/fixtures/: diamond_output.tsv  diverse_reference.fasta  ground_truth.json  invalid_chars.fasta  malformed.fasta  metagenome_queries.fasta  pathogen_reference.fasta  query_embeddings.parquet  swissprot_queries.fasta  swissprot_reference.fasta  valid.fasta
(+32 files in other folders)
