[project]
name = "distributed-alignment"
version = "0.1.0"
description = "A distributed, fault-tolerant protein sequence alignment system built around DIAMOND BLAST"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jonny" },
]

dependencies = [
    "duckdb>=1.0",
    "pyarrow>=17.0",
    "pydantic>=2.0",
    "pydantic-settings[toml]>=2.0",
    "rich>=13.0",
    "structlog>=24.0",
    "typer>=0.12",
]

[project.scripts]
distributed-alignment = "distributed_alignment.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/distributed_alignment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests requiring DIAMOND binary",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.uv]
# Don't install the project as an editable package — Python's site.py
# silently fails to process .pth files on paths containing spaces
# (e.g. iCloud Drive). Instead, pytest uses `pythonpath = ["src"]` and
# the CLI uses a __main__.py entry point via `uv run python -m distributed_alignment`.
package = false

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
